[package]
name = "potent-rusty-api-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = {version = "0.11.16", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

serde_json = "1.0"
rayon = "1.7.0"
